Wed Feb 23 17:34:01 2005  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_node_queue_redraw): Patch from
	jorn@nl.linux.org (Jorn Baayen) to notice changes to fixed-height
	widgets.

2005-02-23  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkkeys-win32.c (update_keymap): Workaround for bug in
	MapVirtualKey(VK_DIVIDE, 0) in some Windows versions. (#142998)

Tue Feb 22 13:49:09 2005  Manish Singh  <yosh@gimp.org>

        * gtk/updateiconcache.c: #include <config.h>

2005-02-22  Federico Mena Quintero  <federico@ximian.com>

	Fix #164940, patch by Ben Maurer and Tommi Komulainen.

	* gdk/gdkrgb.c (gdk_rgb_convert_565_d): Constify the "dmp" variable.
	(gdk_rgb_convert_565_d): Likewise.
	(DM_565): Made a static const precomputed array to avoid
	allocating it at runtime.
	(gdk_rgb_preprocess_dm_565): #ifdef out.

2005-02-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c: 
	* gtk/gtkclipboard.c: Fix freedesktop.org links in the docs.

	* gdk/x11/gdkdrawable-x11.c (_gdk_x11_have_render_with_trapezoids): 
	Set have_render_with_trapezoids to GDK_YES when we have 
	a new enough Render extension.  (#167965,Billy Biggs) 

	* gdk/x11/gdkx.h: 
	* gdk/x11/gdkdisplay-x11.c (gdk_x11_display_get_user_time_libgtk_only):
	Add libgtk_only api to obtain the user_time of the display. 
	This function will become generally available api in 2.8.

	* gtk/gtkwindow.c (gtk_window_present): Use the timestamp of
	the last user interaction when focusing the window.  (#166379, 
	Elijah Newren)

Thu Feb 17 14:52:57 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtkcombobox.c: Pass gtk_widget_get_toplevel() a GTK_WIDGET.

2005-02-16  Matthias Clasen  <mclasen@redhat.com>

	Fixes for #143829, Tommi Komulainen, Christian Persch:
	
	* gtk/gtktreeview.c (gtk_tree_view_destroy): Remove the
	typeselect_flush_timeout when destroying the widgets
	it is operating on.  
	(gtk_tree_view_ensure_interactive_directory): Add the 